# MATH-182

./: CMakeLists.txt  README.md  compile_commands.json  flake.nix  shell.nix
.cache/clangd/index/: aabb2d.h.3AC63A6763A3250A.idx  affine-mat.h.15574CA4D9C0AB0C.idx  affine-post.h.3D759050C44FFE10.idx  affine-pre.h.DA30E343B16F6139.idx  affine.h.A4EAD23661B42140.idx  affine.h.A73007EB6DDE1073.idx  affine2d.h.1E708E527AD136C1.idx  bezier.h.5213528013396B48.idx  box.h.93219A13BED65F26.idx  cam.h.679C715518123AFC.idx  camera.h.EED1A99FEE3758B3.idx  cglm.h.4DBD82E83336E2AF.idx  color.h.41E9F08C3F5AC8A5.idx  common.h.1762F27DC5534E4A.idx  curve.h.8252D09318DB1BAA.idx  ease.h.E2FE1795A99B2797.idx  euler.h.0C2F7C96121DFB94.idx  euler_to_quat_rh.h.735333043EB84B5B.idx  frustum.h.49046BC0BE50DF77.idx  glad.c.FBE7BF0AFC540127.idx  glad.h.36B2FA8EDF15A3B6.idx  intrin.h.511E535397334CAD.idx  io.h.DEF206075887C722.idx  (+41 more)
.direnv/: flake-profile-1-link
include/: DynamicArrays.h  camera.h  entity.h  light.h  mesh.h  model.h  scene.h  shader.h  texture.h
include/glad/: glad.h
models/cube/: cube2.mtl
models/plane/: plane.mtl
shaders/: crate.frag  lightSource.frag  shader.frag  shader.vert
shaders/backpack/: backpack.frag
shaders/crate/: crate.frag
shaders/gouraud/: shader.frag  shader.vert
shaders/lightSource/: shader.vert
shaders/main/: shader.frag
shaders/multiLightCrate/: multiLightCrate.frag
shaders/outlineHighlight/: shader.vert
src/: DynamicArrays.c  camera.c  entity.c  glad.c  light.c  main.c  mesh.c  model.c  scene.c  shader.c  texture.c
(+6 files in other folders)
